TF tests - use build-branch of LS repo

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,6 +16,7 @@ jobs:
       uses: actions/checkout@v2
       with:
         repository: localstack/localstack-terraform-test
+        ref: build
         path: moto-terraform-tests
         submodules: 'true'
     - uses: actions/setup-go@v2
@@ -27,8 +28,10 @@ jobs:
       uses: actions/cache@v2
       with:
         path: '~/.cache'
-        key: 'terraformcache2'
+        key: 'terraformcache3'
     - name: Download
+      env:
+        DOWNLOAD_TEST_BIN: 1
       if: ${{ steps.terraformcache.outputs.cache-hit != 'true' }}
       run: |
         cd moto-terraform-tests
@@ -211,6 +214,7 @@ jobs:
       uses: actions/checkout@v2
       with:
         repository: localstack/localstack-terraform-test
+        ref: build
         path: moto-terraform-tests
         submodules: 'true'
     - name: Set up Python ${{ matrix.python-version }}
@@ -221,7 +225,7 @@ jobs:
       uses: actions/cache@v2
       with:
         path: '~/.cache'
-        key: 'terraformcache2'
+        key: 'terraformcache3'
     - name: Start MotoServer
       run: |
         python setup.py sdist
