--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -64,7 +64,7 @@ jobs:
       - name: Update pip
         if: ${{ steps.pip-cache.outputs.cache-hit != 'true' }}
         run: |
-          python -m pip install pip==21.1.3
+          python -m pip install --upgrade pip
       - name: Install project dependencies
         if: ${{ steps.pip-cache.outputs.cache-hit != 'true' }}
         run: |
@@ -96,8 +96,7 @@ jobs:
     # Update PIP
     - name: Update pip
       run: |
-        # https://github.com/pypa/pip/issues/10201
-        python -m pip install pip==21.1.3
+        python -m pip install --upgrade pip
     # Still need to properly install the dependencies - it will only skip the download part
     - name: Install project dependencies
       run: |
@@ -134,7 +133,7 @@ jobs:
         key: pip-${{ matrix.python-version }}-${{ hashFiles('**/setup.py') }}-4
     - name: Update pip
       run: |
-        python -m pip install pip==21.1.3
+        python -m pip install --upgrade pip
     - name: Install project dependencies
       run: |
         pip install -r requirements-dev.txt
@@ -182,7 +181,7 @@ jobs:
         key: pip-${{ matrix.python-version }}-${{ hashFiles('**/setup.py') }}-4
     - name: Update pip
       run: |
-        python -m pip install pip==21.1.3
+        python -m pip install --upgrade pip
     - name: Install project dependencies
       run: |
         pip install -r requirements-dev.txt
