--- a/docs/.readthedocs-custom-steps.yml
+++ b/docs/.readthedocs-custom-steps.yml
@@ -1,4 +1,6 @@
 # https://github.com/readthedocs/readthedocs.org/issues/6662#issuecomment-653675848
 steps:
 - echo "test"
+- pwd
+- ls -la
 - python -m "$@"
