--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,7 @@ jobs:
         uses: actions/cache@v3
         with:
           path: ${{ steps.pip-cache-dir.outputs.dir }}
-          key: pip-${{ matrix.python-version }}-${{ hashFiles('**/setup.py') }}-4
+          key: pip-${{ matrix.python-version }}-${{ hashFiles('**/setup.cfg') }}-4
       - name: Update pip
         if: ${{ steps.pip-cache.outputs.cache-hit != 'true' }}
         run: |
@@ -58,7 +58,7 @@ jobs:
       uses: actions/cache@v3
       with:
         path: ${{ steps.pip-cache.outputs.dir }}
-        key: pip-${{ matrix.python-version }}-${{ hashFiles('**/setup.py') }}-4
+        key: pip-${{ matrix.python-version }}-${{ hashFiles('**/setup.cfg') }}
     # Update PIP
     - name: Update pip
       run: |
@@ -96,7 +96,7 @@ jobs:
       uses: actions/cache@v3
       with:
         path: ${{ steps.pip-cache.outputs.dir }}
-        key: pip-${{ matrix.python-version }}-${{ hashFiles('**/setup.py') }}-4
+        key: pip-${{ matrix.python-version }}-${{ hashFiles('**/setup.cfg') }}
     - name: Update pip
       run: |
         python -m pip install --upgrade pip
@@ -134,7 +134,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Start MotoServer
       run: |
-        python setup.py sdist
+        python -m build
         docker run --rm -t --name motoserver -e TEST_SERVER_MODE=true -e AWS_SECRET_ACCESS_KEY=server_secret -e AWS_ACCESS_KEY_ID=server_key -v `pwd`:/moto -p 5000:5000 -v /var/run/docker.sock:/var/run/docker.sock python:3.7-buster /moto/scripts/ci_moto_server.sh &
         python scripts/ci_wait_for_server.py
     - name: Get pip cache dir
@@ -145,7 +145,7 @@ jobs:
       uses: actions/cache@v3
       with:
         path: ${{ steps.pip-cache.outputs.dir }}
-        key: pip-${{ matrix.python-version }}-${{ hashFiles('**/setup.py') }}-4
+        key: pip-${{ matrix.python-version }}-${{ hashFiles('**/setup.cfg') }}
     - name: Update pip
       run: |
         python -m pip install --upgrade pip
@@ -179,6 +179,70 @@ jobs:
         path: |
           serverlogs/*
 
+  terraform:
+    name: Terraform Tests
+    runs-on: ubuntu-latest
+    needs: terraformcache
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version: [ 3.8 ]
+        part: ["aa", "ab", "ac"]
+
+    steps:
+    - uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
+    - name: Checkout Terraform Tests repo
+      uses: actions/checkout@v2
+      with:
+        repository: localstack/localstack-terraform-test
+        ref: build
+        path: moto-terraform-tests
+        submodules: 'true'
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v2
+      with:
+        python-version: ${{ matrix.python-version }}
+    - name: cache
+      uses: actions/cache@v2
+      with:
+        path: '~/.cache'
+        key: 'terraformcache3'
+    - name: Start MotoServer
+      run: |
+        python -m build
+        docker run --rm -t --name motoserver -e TEST_SERVER_MODE=true -e MOTO_PORT=4566 -e AWS_SECRET_ACCESS_KEY=server_secret -e AWS_ACCESS_KEY_ID=server_key -v `pwd`:/moto -p 4566:4566 -v /var/run/docker.sock:/var/run/docker.sock python:3.7-buster /moto/scripts/ci_moto_server.sh &
+        MOTO_PORT=4566 python scripts/ci_wait_for_server.py
+    # Poor man's parallelization
+    # Running them sequentially takes to much time
+    # And using the build in parallel-argument does not help with reducing runtime
+    # So we simply split the list of tests, and ask our CI for separate VM's to run them in parallel
+    - name: Get list of tests
+      run: |
+        cd moto-terraform-tests
+        bin/list-tests -i ../tests/terraform-tests.success.txt -e ../tests/terraform-tests.failures.txt > tftestlist.txt
+        split -n l/3 tftestlist.txt tf-split-
+        cd ..
+    - name: Run Terraform Tests
+      run: |
+        cd moto-terraform-tests
+        AWS_DEFAULT_REGION=us-east-1 AWS_ALTERNATE_REGION=eu-west-1 bin/run-tests -t -i tf-split-${{ matrix.part }} -e ../tests/terraform-tests.failures.txt
+        cd ..
+    - name: "Create report"
+      run: |
+        cd moto-terraform-tests
+        bin/create-report
+        bin/create-report-cli
+        cd ..
+    - name: Archive TF logs
+      if: always()
+      uses: actions/upload-artifact@v2
+      with:
+        name: buildfolder-${{ matrix.part }}
+        path: |
+          moto-terraform-tests/build/*
+
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
@@ -197,9 +261,9 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Update & Build
         run: |
-          pip install wheel packaging
+          pip install build
           python update_version_from_git.py
-          python setup.py sdist bdist_wheel
+          python -m build
       - name: Publish to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
