--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,5 @@
 include README.md LICENSE AUTHORS.md
-include requirements.txt requirements-dev.txt tox.ini
+include requirements.txt requirements-dev.txt
 include moto/config/resources/aws_managed_rules.json
 include moto/ec2/resources/instance_types.json
 include moto/ec2/resources/instance_type_offerings/*/*.json
