--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,153 @@
+[metadata]
+name = mototest
+version = 0.3.5.dev
+long_description = file:README.md
+long_description_content_type = text/markdown
+author = Steve Pulec
+author_email = "spulec@gmail.com"
+url = https://github.com/spulec/moto
+license = Apache
+test_suite = tests
+classifiers =
+    Programming Language :: Python :: 3
+    Programming Language :: Python :: 3.6
+    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
+    License :: OSI Approved :: Apache Software License
+    Topic :: Software Development :: Testing
+keywords = aws ec2 s3 boto3 mock
+project_urls =
+    Documentation = http://docs.getmoto.org/en/latest/
+
+[options]
+install_requires =
+    boto3>=1.9.201
+    botocore>=1.12.201
+    cryptography>=3.3.1
+    requests>=2.5
+    xmltodict
+    werkzeug
+    pytz
+    python-dateutil<3.0.0,>=2.1
+    responses>=0.9.0
+    MarkupSafe!=2.0.0a1
+    Jinja2>=2.10.1
+    importlib_metadata ; python_version < '3.8'
+packages = moto
+include_package_data = True
+
+[options.extras_require]
+all =
+    python-jose[cryptography]>=3.1.0,<4.0.0
+    ecdsa!=0.15
+    docker>=2.5.1
+    PyYAML>=5.1
+    cfn-lint>=0.4.0
+    sshpubkeys>=3.1.0
+    jsondiff>=1.1.2
+    dataclasses; python_version < '3.7'
+    aws-xray-sdk!=0.96,>=0.93
+    setuptools
+acm =
+apigateway =
+    python-jose[cryptography]>=3.1.0,<4.0.0
+    ecdsa!=0.15
+applicationautoscaling =
+athena =
+autoscaling =
+awslambda = docker>=2.5.1
+batch = docker>=2.5.1
+budgets =
+cloudformation =
+    docker>=2.5.1
+    PyYAML>=5.1
+    cfn-lint>=0.4.0
+cloudfront =
+cloudtrail =
+cloudwatch =
+codecommit =
+codepipeline =
+cognitoidentity =
+cognitoidp =
+    python-jose[cryptography]>=3.1.0,<4.0.0
+    ecdsa!=0.15
+config =
+datapipeline =
+datasync =
+dms =
+ds = sshpubkeys>=3.1.0
+dynamodb = docker>=2.5.1
+dynamodbstreams = docker>=2.5.1
+ec2 = sshpubkeys>=3.1.0
+ec2instanceconnect =
+ecr =
+ecs =
+efs = sshpubkeys>=3.1.0
+eks =
+elasticbeanstalk =
+elastictranscoder =
+elb =
+elbv2 =
+emr =
+emrcontainers =
+events =
+firehose =
+forecast =
+glacier =
+glue =
+iam =
+iot =
+iotdata = jsondiff>=1.1.2
+kinesis =
+kinesisvideo =
+kinesisvideoarchivedmedia =
+kms =
+logs =
+managedblockchain =
+mediaconnect =
+medialive =
+mediapackage =
+mediastore =
+mediastoredata =
+opsworks =
+organizations =
+polly =
+ram =
+rds =
+redshift =
+resourcegroups =
+resourcegroupstaggingapi =
+route53 =
+route53resolver = sshpubkeys>=3.1.0
+s3 = PyYAML>=5.1
+sagemaker =
+sdb =
+secretsmanager =
+ses =
+sns =
+sqs =
+ssm =
+    PyYAML>=5.1
+    dataclasses; python_version < '3.7'
+stepfunctions =
+sts =
+support =
+swf =
+timestreamwrite =
+transcribe =
+wafv2 =
+xray =
+    aws-xray-sdk!=0.96,>=0.93
+    setuptools
+
+[options.entry_points]
+console_scripts =
+    moto_server = moto.server:main
+
 [bdist_wheel]
 universal=1
- 
+
 [tool:pytest]
 markers =
     network: marks tests which require network connection
