--- a/.github/workflows/dockertests.yml
+++ b/.github/workflows/dockertests.yml
@@ -55,7 +55,7 @@ jobs:
       run: |
         python setup.py sdist
         docker run --rm -t --name motoserver -e TEST_SERVER_MODE=true -e AWS_SECRET_ACCESS_KEY=server_secret -e MOTO_PORT=4555 -e AWS_ACCESS_KEY_ID=server_key -v `pwd`:/moto -p 4555:5000 -v /var/run/docker.sock:/var/run/docker.sock python:3.7-buster /moto/scripts/ci_moto_server.sh &
-        python scripts/ci_wait_for_server.py
+        MOTO_PORT=4555 python scripts/ci_wait_for_server.py
     - name: Get pip cache dir
       id: pip-cache
       run: |
