--- a/.github/workflows/dockertests.yml
+++ b/.github/workflows/dockertests.yml
@@ -35,8 +35,8 @@ jobs:
         run: |
           pip install -r requirements-dev.txt
 
-  test:
-    name: Test Docker configurations
+  test_custom_port:
+    name: Test Custom Port
     runs-on: ubuntu-latest
     needs: cache
     strategy:
@@ -80,10 +80,10 @@ jobs:
     - name: "Stop MotoServer"
       if: always()
       run: |
-        mkdir serverlogs
+        mkdir serverlogs1
         pwd
         ls -la
-        cp server_output.log serverlogs/server_output.log
+        cp server_output.log serverlogs1/server_output.log
         docker stop motoserver
     - name: Archive TF logs
       if: always()
@@ -91,4 +91,63 @@ jobs:
       with:
         name: motoserver-${{ matrix.python-version }}
         path: |
-          serverlogs/*
+          serverlogs1/*
+
+  test_custom_networkmode:
+    name: Pass NetworkMode to AWSLambda
+    runs-on: ubuntu-latest
+    needs: cache
+    strategy:
+      matrix:
+        python-version: [3.9]
+
+    steps:
+    - uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v2
+      with:
+        python-version: ${{ matrix.python-version }}
+    - name: Start MotoServer on an unusual port
+      run: |
+        python setup.py sdist
+        docker run --rm -t -e MOTO_DOCKER_NETWORK_MODE=host -e TEST_SERVER_MODE=true -e AWS_SECRET_ACCESS_KEY=server_secret -e MOTO_PORT=4555 -e AWS_ACCESS_KEY_ID=server_key -v `pwd`:/moto -p 4555:4555 -v /var/run/docker.sock:/var/run/docker.sock python:3.7-buster /moto/scripts/ci_moto_server.sh &
+        MOTO_PORT=4555 python scripts/ci_wait_for_server.py
+    - name: Get pip cache dir
+      id: pip-cache
+      run: |
+        echo "::set-output name=dir::$(pip cache dir)"
+    - name: pip cache
+      uses: actions/cache@v2
+      with:
+        path: ${{ steps.pip-cache.outputs.dir }}
+        key: pip-${{ matrix.python-version }}-${{ hashFiles('**/setup.py') }}
+    - name: Update pip
+      run: |
+        python -m pip install --upgrade pip
+    - name: Install project dependencies
+      run: |
+        pip install -r requirements-dev.txt
+    - name: Test
+      env:
+        TEST_SERVER_MODE: ${{ true }}
+        MOTO_PORT: 4555
+        MOTO_DOCKER_NETWORK_MODE: host
+      run: |
+        pytest -sv tests/test_awslambda/test_lambda_invoke.py::test_invoke_lambda_using_networkmode tests/test_cloudformation/test_cloudformation_custom_resources.py
+    - name: "Stop MotoServer"
+      if: always()
+      run: |
+        mkdir serverlogs2
+        pwd
+        ls -la
+        cp server_output.log serverlogs2/server_output.log
+        docker stop motoserver
+    - name: Archive TF logs
+      if: always()
+      uses: actions/upload-artifact@v2
+      with:
+        name: motoserver-${{ matrix.python-version }}
+        path: |
+          serverlogs2/*
