--- a/.github/workflows/dockertests.yml
+++ b/.github/workflows/dockertests.yml
@@ -77,7 +77,7 @@ jobs:
         MOTO_PORT: 4555
       run: |
         pytest -sv tests/test_awslambda/test_lambda_invoke.py::test_invoke_lambda_using_environment_port tests/test_cloudformation/test_cloudformation_custom_resources.py
-    - name: "Stop MotoServer"
+    - name: Collect Logs
       if: always()
       run: |
         mkdir serverlogs1
@@ -85,13 +85,70 @@ jobs:
         ls -la
         cp server_output.log serverlogs1/server_output.log
         docker stop motoserver
-    - name: Archive TF logs
+    - name: Archive Logs
       if: always()
       uses: actions/upload-artifact@v2
       with:
         name: motoserver-${{ matrix.python-version }}
         path: |
           serverlogs1/*
+
+  test_custom_name:
+    name: Test Custom Network Name
+    runs-on: ubuntu-latest
+    needs: cache
+    strategy:
+      matrix:
+        python-version: [3.9]
+
+    steps:
+    - uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v2
+      with:
+        python-version: ${{ matrix.python-version }}
+    - name: Start MotoServer on a custom Docker network bridge
+      run: |
+        python setup.py sdist
+        docker network create -d bridge my-custom-network
+        docker run --rm -t -e TEST_SERVER_MODE=true -e MOTO_DOCKER_NETWORK_NAME=my-custom-network -e AWS_SECRET_ACCESS_KEY=server_secret -e AWS_ACCESS_KEY_ID=server_key -v `pwd`:/moto -p 5000:5000 -v /var/run/docker.sock:/var/run/docker.sock python:3.7-buster /moto/scripts/ci_moto_server.sh &
+        python scripts/ci_wait_for_server.py
+    - name: Get pip cache dir
+      id: pip-cache
+      run: |
+        echo "::set-output name=dir::$(pip cache dir)"
+    - name: pip cache
+      uses: actions/cache@v2
+      with:
+        path: ${{ steps.pip-cache.outputs.dir }}
+        key: pip-${{ matrix.python-version }}-${{ hashFiles('**/setup.py') }}
+    - name: Update pip
+      run: |
+        python -m pip install --upgrade pip
+    - name: Install project dependencies
+      run: |
+        pip install -r requirements-dev.txt
+    - name: Test
+      env:
+        TEST_SERVER_MODE: ${{ true }}
+      run: |
+        pytest -sv tests/test_awslambda/test_lambda_invoke.py::test_invoke_lambda_using_environment_port tests/test_cloudformation/test_cloudformation_custom_resources.py
+    - name: Collect Logs
+      if: always()
+      run: |
+        mkdir serverlogs2
+        pwd
+        ls -la
+        cp server_output.log serverlogs2/server_output.log
+    - name: Archive logs
+      if: always()
+      uses: actions/upload-artifact@v2
+      with:
+        name: motoserver-${{ matrix.python-version }}
+        path: |
+          serverlogs2/*
 
   test_custom_networkmode:
     name: Pass NetworkMode to AWSLambda
@@ -136,17 +193,17 @@ jobs:
         MOTO_DOCKER_NETWORK_MODE: host
       run: |
         pytest -sv tests/test_awslambda/test_lambda_invoke.py::test_invoke_lambda_using_networkmode tests/test_cloudformation/test_cloudformation_custom_resources.py
-    - name: "Stop MotoServer"
+    - name: Collect Logs
       if: always()
       run: |
-        mkdir serverlogs2
+        mkdir serverlogs3
         pwd
         ls -la
-        cp server_output.log serverlogs2/server_output.log
-    - name: Archive TF logs
+        cp server_output.log serverlogs3/server_output.log
+    - name: Archive Logs
       if: always()
       uses: actions/upload-artifact@v2
       with:
         name: motoserver-${{ matrix.python-version }}
         path: |
-          serverlogs2/*
+          serverlogs3/*
