--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,10 +28,11 @@ jobs:
       uses: actions/cache@v2
       with:
         path: '~/.cache'
-        key: 'terraformcache3'
+        key: 'terraformcache_download'
     - name: Download
       env:
         DOWNLOAD_TEST_BIN: 1
+        TEST_BIN_URL: "https://moto-terraform-test.s3.amazonaws.com/aws.test"
       if: ${{ steps.terraformcache.outputs.cache-hit != 'true' }}
       run: |
         cd moto-terraform-tests
@@ -286,7 +287,7 @@ jobs:
       uses: actions/cache@v2
       with:
         path: '~/.cache'
-        key: 'terraformcache3'
+        key: 'terraformcache_download'
     - name: Start MotoServer
       run: |
         python setup.py sdist
