--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,7 @@ jobs:
       uses: actions/cache@v2
       with:
         path: '~/.cache'
-        key: 'terraformcache_download'
+        key: 'terraformcache_download2'
     - name: Download
       env:
         DOWNLOAD_TEST_BIN: 1
@@ -287,7 +287,7 @@ jobs:
       uses: actions/cache@v2
       with:
         path: '~/.cache'
-        key: 'terraformcache_download'
+        key: 'terraformcache_download2'
     - name: Start MotoServer
       run: |
         python setup.py sdist
