--- a/setup.cfg
+++ b/setup.cfg
@@ -12,6 +12,9 @@ relative_files = True
 ignore = W503,W605,E128,E501,E203,E266,E501,E231
 exclude = moto/packages,dist
 
+[pylint.MASTER]
+ignore-paths=moto/packages
+
 [pylint.'MESSAGES CONTROL']
 disable = W,C,R,E
 # Check we have any tests with duplicate names (causing them to be skipped)
