--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -216,50 +216,6 @@ jobs:
         path: |
           serverlogs/*
 
-  test_responses:
-    name: Test Responses versions
-    runs-on: ubuntu-latest
-    needs: lint
-    strategy:
-      fail-fast: false
-      matrix:
-        python-version: [ 3.8 ]
-        responses-version: [0.11.0, 0.12.0, 0.12.1, 0.13.0, 0.15.0, 0.17.0]
-
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v2
-        with:
-          python-version: ${{ matrix.python-version }}
-      - name: Get pip cache dir
-        id: pip-cache
-        run: |
-          echo "::set-output name=dir::$(pip cache dir)"
-      - name: pip cache
-        uses: actions/cache@v2
-        with:
-          path: ${{ steps.pip-cache.outputs.dir }}
-          key: pip-${{ matrix.python-version }}-${{ hashFiles('**/setup.py') }}-4
-      - name: Install project dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements-dev.txt
-          pip install pytest-cov
-          pip install responses==${{ matrix.responses-version }}
-          pip install "coverage<=4.5.4"
-      - name: Test core-logic with responses==${{ matrix.responses-version }}
-        run: |
-          pytest -sv --cov=moto --cov-report xml ./tests/test_core ./tests/test_apigateway/test_apigateway_integration.py
-      - name: "Upload coverage to Codecov"
-        if: ${{ github.repository == 'spulec/moto'}}
-        uses: codecov/codecov-action@v1
-        with:
-          fail_ci_if_error: true
-          flags: test_responses
-
   terraform:
     name: Terraform Tests
     runs-on: ubuntu-latest
@@ -327,7 +283,7 @@ jobs:
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
-    needs: [test, testserver, terraform, test_responses]
+    needs: [test, testserver, terraform ]
     if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' && github.repository == 'spulec/moto' }}
     strategy:
       matrix:
