--- a/.github/workflows/test_outdated_versions.yml
+++ b/.github/workflows/test_outdated_versions.yml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [ "3.7", "3.9" ]
+        python-version: [ "3.7", "3.9", "3.10" ]
         responses-version: ["0.11.0", "0.12.0", "0.12.1", "0.13.0", "0.15.0", "0.17.0" ]
         mock-version: [ "3.0.5", "4.0.0", "4.0.3" ]
 
