--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -312,6 +312,10 @@ jobs:
       - name: Build Docker release
         run: |
           docker build -t motoserver/moto . --tag moto:latest
+      # Required to get the correct Digest
+      # See https://github.com/docker/build-push-action/issues/461
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
