--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -250,18 +250,13 @@ jobs:
         python setup.py sdist
         docker run --rm -t --name motoserver -e TEST_SERVER_MODE=true -e MOTO_PORT=4566 -e AWS_SECRET_ACCESS_KEY=server_secret -e AWS_ACCESS_KEY_ID=server_key -v `pwd`:/moto -p 4566:4566 -v /var/run/docker.sock:/var/run/docker.sock python:3.7-buster /moto/scripts/ci_moto_server.sh &
         MOTO_PORT=4566 python scripts/ci_wait_for_server.py
-    - name: Prepare test environment
+    - name: Run TF tests
       run: |
         pwd
         ls -la
         pip install sure
         pip install -r requirements.txt
-        python -m tests.generator
-    - name: Run tests
-      run: |
-        TEST_CASES=$(bin/select-tests | xargs | sed 's/ / or /g')
-        echo "Running test cases: $TEST_CASES"
-        python -m pytest --durations=20 tests/ --tests-per-worker 4 -k "$TEST_CASES"
+        make terraformtests
     - name: "Create report"
       run: |
         ls -la
