--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -254,9 +254,10 @@ jobs:
       run: |
         pwd
         ls -la
-        pip install sure
-        pip install -r requirements.txt
-        make terraformtests
+        ls -la tests/terraformtests
+        ls -la tests/terraformtests/terraform-provider-aws
+        echo "Need to 1) cache module data, 2) patch tests, 3) figure out location for provider-directory, 4) list only applicable tests
+        cd tests/terraformtests/terraform-provider-aws && go test ./internal/service/s3 -test.v -test.run bucket_object_data_source_test.go
     - name: "Create report"
       run: |
         ls -la
