--- a/.github/workflows/test_terraform.yml
+++ b/.github/workflows/test_terraform.yml
@@ -9,17 +9,11 @@ jobs:
         run: echo "::set-output name=matrix::$(python tests/terraformtests/get_tf_services.py --names)"
     outputs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
-  testdist:
+  test_service:
     needs: prepare_list
-    runs-on: ubuntu-latest
     strategy:
       matrix:
-        package: ${{ fromJson(needs.prepare_list.outputs.matrix) }}
-    steps:
-      - run: echo "${{ matrix.package }}"
-  test:
-    strategy:
-      matrix:
+        service: ${{ fromJson(needs.prepare_list.outputs.matrix) }}
         go-version: [1.18.x]
         os: [ubuntu-latest]
     runs-on: ${{ matrix.os }}
@@ -41,4 +35,9 @@ jobs:
         key: ${{ runner.os }}-go-${{ matrix.go-version }}-${{ hashFiles('**/tests/terraformtests/terraform-provider-aws/go.sum') }}
         restore-keys: |
           ${{ runner.os }}-go-${{ matrix.go-version }}-
-    - run: cd tests/terraformtests/terraform-provider-aws && go test ./internal/service/iam/ -test.v -test.run TestAccIAMAccessKey
+    - id: get-list
+      run: echo "::set-output name=testlist::$(python tests/terraformtests/get_tf_tests ${{ matrix.service }})"
+    - run: |
+        echo (test_list=$(python tests/terraformtests/get_tf_tests.py)) >> $env:GITHUB_ENV
+        echo ${{ steps.get_list.outputs.testlist }}
+        cd tests/terraformtests/terraform-provider-aws && go test ./internal/service/${{ matrix.service }}/ -test.v -test.run ${{ steps.get_list.outputs.testlist }}
