--- a/.github/workflows/test_terraform.yml
+++ b/.github/workflows/test_terraform.yml
@@ -12,6 +12,7 @@ jobs:
   test_service:
     needs: prepare_list
     strategy:
+      fail-fast: false
       matrix:
         service: ${{ fromJson(needs.prepare_list.outputs.matrix) }}
         go-version: [1.18.x]
