--- a/.github/workflows/test_terraform.yml
+++ b/.github/workflows/test_terraform.yml
@@ -48,4 +48,4 @@ jobs:
       run: echo "::set-output name=testlist::$(python tests/terraformtests/get_tf_tests.py ${{ matrix.service }})"
     - name: Execute tests
       run: |
-        cd tests/terraformtests && bin/run_go_test ${{ matrix.service }} ${{ steps.get-list.outputs.testlist }}
+        make terraformtests SERVICE_NAME=${{ matrix.service }} TEST_NAMES=${{ steps.get-list.outputs.testlist }}
