Techdebt: Replace string-format with f-strings (for c* dirs)

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ markers =
 relative_files = True
 
 [flake8]
-ignore = W503,W605,E128,E501,E203,E266,E501,E231
+ignore = W503,W605,E128,E501,E203,E266,E501,E231,FS003
 exclude = moto/packages,dist,tests/terraformtests
 
 [pylint.MASTER]
