Remove Py3.6 support

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,11 +5,10 @@ on: [push, pull_request]
 jobs:
   cache:
     name: Caching
-    # Change to ubuntu-latest after dropping Py3.6
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [ 3.6, 3.7, 3.8, 3.9, "3.10", "3.11" ]
+        python-version: [ 3.7, 3.8, 3.9, "3.10", "3.11" ]
 
     steps:
       - uses: actions/checkout@v3
@@ -42,7 +41,7 @@ jobs:
     needs: cache
     strategy:
       matrix:
-        python-version: [3.7]
+        python-version: [3.9]
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python ${{ matrix.python-version }}
@@ -73,12 +72,12 @@ jobs:
 
   test:
     name: Unit test
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     needs: lint
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.6, 3.7, 3.8, 3.9, "3.10", "3.11"]
+        python-version: [3.7, 3.8, 3.9, "3.10", "3.11"]
 
     steps:
     - uses: actions/checkout@v3
@@ -117,12 +116,12 @@ jobs:
 
   testserver:
     name: Unit tests in Server Mode
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     needs: lint
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.6, 3.7, 3.8, 3.9, "3.10", "3.11"]
+        python-version: [3.7, 3.8, 3.9, "3.10", "3.11"]
 
     steps:
     - uses: actions/checkout@v3
