--- a/setup.cfg
+++ b/setup.cfg
@@ -34,7 +34,7 @@ install_requires =
     python-dateutil<3.0.0,>=2.1
     responses>=0.13.0
     Jinja2>=2.10.1
-    importlib_metadata ; python_version MarkupSafe!=2.0.0a1< '3.8'
+    importlib_metadata ; python_version < '3.8'
 packages = moto
 include_package_data = True
 
