Packaging - update setup.cfg to use latest config

--- a/setup.cfg
+++ b/setup.cfg
@@ -35,7 +35,8 @@ install_requires =
     responses>=0.13.0
     Jinja2>=2.10.1
     importlib_metadata ; python_version < '3.8'
-packages = moto
+package_dir =
+    moto = moto
 include_package_data = True
 
 [options.extras_require]
