--- a/setup.cfg
+++ b/setup.cfg
@@ -24,7 +24,7 @@ project_urls =
     Changelog = https://github.com/spulec/moto/blob/master/CHANGELOG.md
 
 [options]
-python_requires = ">=3.7"
+python_requires = >=3.7
 install_requires =
     boto3>=1.9.201
     botocore>=1.12.201
