--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install wheel setuptools packaging twine --upgrade
+        pip install wheel setuptools packaging twine build --upgrade
     - name: Verify Tag does not exist
       run: |
         ! git rev-parse ${{ env.VERSION }} || { echo "Ensure that no tag exists for ${{ env.VERSION }}" ; exit 1; }
@@ -37,7 +37,7 @@ jobs:
     - name: Set version number
       run: python update_version_from_git.py ${{ env.VERSION }}
     - name: Build
-      run: python setup.py sdist bdist_wheel
+      run: python -m build
     - name: Publish to PyPI
       uses: pypa/gh-action-pypi-publish@release/v1
       with:
