Admin: Update Docs to point to getmoto

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ long_description = file:README.md
 long_description_content_type = text/markdown
 author = Steve Pulec
 author_email = "spulec@gmail.com"
-url = https://github.com/spulec/moto
+url = https://github.com/getmoto/moto
 license = Apache License 2.0
 test_suite = tests
 classifiers =
@@ -20,8 +20,8 @@ classifiers =
 keywords = aws ec2 s3 boto3 mock
 project_urls =
     Documentation = http://docs.getmoto.org/en/latest/
-    Issue tracker = https://github.com/spulec/moto/issues
-    Changelog = https://github.com/spulec/moto/blob/master/CHANGELOG.md
+    Issue tracker = https://github.com/getmoto/moto/issues
+    Changelog = https://github.com/getmoto/moto/blob/master/CHANGELOG.md
 
 [options]
 python_requires = >=3.7
