--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -108,7 +108,7 @@ jobs:
       run: |
         make test-only
     - name: "Upload coverage to Codecov"
-      if: ${{ github.repository == 'spulec/moto'}}
+      if: ${{ github.repository == 'getmoto/moto'}}
       uses: codecov/codecov-action@v3
       with:
         fail_ci_if_error: false
@@ -158,7 +158,7 @@ jobs:
       run: |
         make test-only
     - name: "Upload coverage to Codecov"
-      if: ${{ github.repository == 'spulec/moto'}}
+      if: ${{ github.repository == 'getmoto/moto'}}
       uses: codecov/codecov-action@v3
       with:
         fail_ci_if_error: false
@@ -183,7 +183,7 @@ jobs:
     name: Deploy
     runs-on: ubuntu-latest
     needs: [test, testserver ]
-    if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' && github.repository == 'spulec/moto' }}
+    if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' && github.repository == 'getmoto/moto' }}
     strategy:
       matrix:
         python-version: [3.8]
@@ -270,7 +270,7 @@ jobs:
           fi
       - name: Leave PR comment with Moto version
         uses: peter-evans/create-or-update-comment@v1
-        if: env.pr_found == 'true' && env.pr_repo == 'spulec/moto'
+        if: env.pr_found == 'true' && env.pr_repo == 'getmoto/moto'
         with:
           issue-number: ${{ env.pr_nr }}
           body: |
