Admin: Update Pip when testing dependencies, and add logging

--- a/.github/workflows/dependency_test.yml
+++ b/.github/workflows/dependency_test.yml
@@ -32,4 +32,4 @@ jobs:
       with:
         name: buildfolder-${{ matrix.python-version }}
         path: |
-          test_results_*.log
+          *.log
